force-app/main/default/objects/Scoring_Event_Clue__c/Scoring_Event_Clue__c.object-meta.xml
<CustomObject>
    <label>Scoring Event Clue</label>
    <nameField>
        <displayFormat>CLUE-{0000}</displayFormat>
        <label>Scoring Event Clue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring Event Clues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>