force-app/main/default/objects/Scoring_Event_Clue__c/fields/Clue_Answer__c.field-meta.xml
<CustomField>
    <fullName>Clue_Answer__c</fullName>
    <label>Clue Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>