force-app/main/default/objects/Scoring_Event_Clue__c/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <label>Event Location</label>
    <referenceTo>Scoring_Event_Location__c</referenceTo>
    <relationshipLabel>Event Clues</relationshipLabel>
    <relationshipName>Scoring_Event_Clues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>