force-app/main/default/objects/Scoring_Event_Clue__c/fields/Min_Point__c.field-meta.xml
<CustomField>
    <fullName>Min_Point__c</fullName>
    <label>Min Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>