force-app/main/default/objects/Scoring_Event_Clue__c/fields/Reduction_Step_Point__c.field-meta.xml
<CustomField>
    <fullName>Reduction_Step_Point__c</fullName>
    <label>Reduction Step Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>