force-app/main/default/objects/Scoring_Event_Clue__c/fields/Scoring_Event__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scoring Event</label>
    <referenceTo>Scoring_Event__c</referenceTo>
    <relationshipLabel>Scoring Event Clues</relationshipLabel>
    <relationshipName>Scoring_Event_Clues</relationshipName>
    <type>Lookup</type>
</CustomField>